Fixed bug #33318 (throw 1; results in Invalid opcode 108/1/8)